--- a/index.pug
+++ b/index.pug
@@ -48,7 +48,7 @@ html(lang="en")
                         button.slider-arrows_arrow.slider-arrows_arrow--right >
                 .slider-dots
                     .slider-dots_items-wrapper 
-                        img.slider-dots_item(src="img/carrots.jpg", alt="", srcset="")
+                        img.slider-dots_item(src="img/carrots-2.jpg", alt="", srcset="")
                     .slider-dots_btn-wrapper 
                         button.btn.slider-dots_btn start drinking
                     .slider-dots_nav 
@@ -80,7 +80,7 @@ html(lang="en")
                     .orange-bg
                         img(src="/img/orange.jpg", alt=" ", srcset="")
                     .orange__btn-wrapper 
-                        button.btn.orange__btn atart drinking
+                        button.btn.orange__btn start drinking
                     .orange__nav 
                         a.orange__arrow(href="#!") 
                             <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
