--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ p {
   /* grid-template-rows: max-content;
   grid-template-columns: 3fr 2fr 1fr;
   grid-template-areas: 'logo nav search'; */
-  grid-template: "logo nav search" max-content / 3fr 2fr 1fr;
+  grid-template: "logo . nav search" max-content / 2fr 1fr 2.5fr 0.5fr;
   align-items: center;
   justify-items: start;
   padding: 20px 0;
@@ -66,13 +66,12 @@ p {
 
 .logo {
   grid-area: logo;
-  justify-self: end;
+  justify-self: right;
   font-family: "Roboto", sans-serif;
   font-size: 24px;
   font-weight: 900;
   color: #ca0043;
   line-height: 1;
-  padding-right: 19%;
   transition: color 0.3s;
 }
 
@@ -174,7 +173,8 @@ arrows */
   display: flex;
 }
 
-.slider-arrows_item {}
+.slider-arrows_item {
+}
 
 .slider-arrows_nav {
   position: absolute;
@@ -197,11 +197,13 @@ arrows */
   transition: opacity 0.2s;
 }
 
-.slider-arrows_arrow:hover {
+.slider-arrows_arrow:hover,
+.orange__arrow:hover {
   opacity: 0.8;
 }
 
-.slider-arrows_arrow:active {
+.slider-arrows_arrow:active,
+.orange__arrow:active {
   opacity: 0.6;
 }
 
@@ -231,7 +233,8 @@ dots */
   display: flex;
 }
 
-.slider-dots_item {}
+.slider-dots_item {
+}
 
 .slider-dots_btn-wrapper {
   position: absolute;
@@ -367,16 +370,37 @@ THIRSTY */
 
 .orange {
   grid-area: ornge;
-  height: 100%;
+  position: relative;
 }
 
+/* crucial wrapper for img in grid */
 .orange-bg {
+  width: 100%;
   height: 100%;
-  width: auto;
+  display: flex;
+  filter: brightness(70%);
 }
 
-.orange__btn {}
+.orange__btn-wrapper {
+  /* position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center; */
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
 
-.orange__nav {}
-
-.orange__arrow {}
+.orange__arrow {
+  position: absolute;
+  bottom: 25px;
+  right: 30px;
+}
