--- a/index.pug
+++ b/index.pug
@@ -88,5 +88,14 @@ html(lang="en")
                                 </svg>
             .wrapper-down 
                 footer.footer 
+                ul.socials
+                    li
+                        a.socials__li(href="") 
+                    li
+                        a.socials__li(href="") 
+                    li
+                        a.socials__li(href="") 
+                    li
+                        a.socials__li(href="") 
                 article.sidebar.common
                                      
