--- a/index.pug
+++ b/index.pug
@@ -90,12 +90,16 @@ html(lang="en")
                 footer.footer 
                 ul.socials
                     li
-                        a.socials__li(href="") 
+                        a.socials__link(href="")
+                            img(src="#!", alt="")
                     li
-                        a.socials__li(href="") 
+                        a.socials__link(href="")
+                            img(src="#!", alt="")
                     li
-                        a.socials__li(href="") 
+                        a.socials__link(href="")
+                            img(src="#!", alt="")
                     li
-                        a.socials__li(href="") 
+                        a.socials__link(href="")
+                            img(src="#!", alt="")
                 article.sidebar.common
                                      
