--- a/index.pug
+++ b/index.pug
@@ -90,16 +90,16 @@ html(lang="en")
                 footer.footer 
                 ul.socials
                     li
-                        a.socials__link(href="")
-                            img(src="#!", alt="")
+                        a.socials__link(href="#!")
+                            img(src="/img/icons_instagram.png", alt="icon-instagram")
                     li
-                        a.socials__link(href="")
-                            img(src="#!", alt="")
+                        a.socials__link(href="#!")
+                            img(src="/img/icons_x.png", alt="icon-x")
                     li
-                        a.socials__link(href="")
-                            img(src="#!", alt="")
+                        a.socials__link(href="#!")
+                            img(src="/img/icons_facebook.png", alt="icon-facebook")
                     li
-                        a.socials__link(href="")
-                            img(src="#!", alt="")
+                        a.socials__link(href="#!")
+                            img(src="/img/icons_linkedin.png", alt="icons-linkedin")
                 article.sidebar.common
                                      
