--- a/index.pug
+++ b/index.pug
@@ -101,5 +101,7 @@ html(lang="en")
                         li
                             a.socials__link(href="#!")
                                 img(src="/img/icons_linkedin.png", alt="icons-linkedin")
+                    form.form(action="#!") 
+                        p.form__title sign up for news
                 article.sidebar.common
                                      
