--- a/index.pug
+++ b/index.pug
@@ -102,6 +102,9 @@ html(lang="en")
                             a.socials__link(href="#!")
                                 img(src="/img/icons_linkedin.png", alt="icons-linkedin")
                     form.form(action="#!") 
-                        p.form__title sign up for news
+                        p.form__title sign up <br> for news
+                        .form__row 
+                            input.form__input(type="text" placeholder="YOUR EMAIL")
+                            button.form__submit(type="submit") SUBMIT
                 article.sidebar.common
                                      
