--- a/style.css
+++ b/style.css
@@ -416,6 +416,14 @@ FOOTER */
 
 .socials__link {}
 
-.sidebar {}
+.form {}
 
-.common {}
+.form__title {}
+
+.form__row {}
+
+.form__input {}
+
+.form__submit {}
+
+.sidebar {}
