--- a/index.pug
+++ b/index.pug
@@ -106,5 +106,6 @@ html(lang="en")
                         .form__row 
                             input.form__input(type="text" placeholder="YOUR EMAIL")
                             button.form__submit(type="submit") SUBMIT
+                    img.footer__logo(src="/img/logo.png")
                 article.sidebar.common
                                      
