--- a/index.pug
+++ b/index.pug
@@ -106,6 +106,12 @@ html(lang="en")
                         .form__row 
                             input.form__input(type="text" placeholder="YOUR EMAIL")
                             button.form__submit(type="submit") SUBMIT
-                    img.footer__logo(src="/img/logo.png")
+                    img.footer__logo(src="/img/logo.png" width="40")
+                    p.copy &copy 2024. Everything stolen
                 article.sidebar.common
+                    h2.title now try <br> out our 
+                     span jui&shy;sy 
+                    .common__desc 
+                        p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem quos dignissimos voluptatibus praesentium obcaecati veritatis tempora culpa nulla magni cum reprehenderit optio aperiam, voluptates expedita minima. Hic et cum vitae incidunt dolorem! Autem atque quam quo qui aperiam delectus fuga?
+                        button.btn.btn--rounded MORE
                                      
