--- a/index.pug
+++ b/index.pug
@@ -112,6 +112,6 @@ html(lang="en")
                     h2.title now try <br> out our 
                      span jui&shy;sy 
                     .common__desc 
-                        p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem quos dignissimos voluptatibus praesentium obcaecati veritatis tempora culpa nulla magni cum reprehenderit optio aperiam, voluptates expedita minima. Hic et cum vitae incidunt dolorem! Autem atque quam quo qui aperiam delectus fuga?
+                        p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem quos dignissimos voluptatibus praesentium obcaecati veritatis tempora culpa nulla magni cum reprehenderit optio aperiam.
                         button.btn.btn--rounded MORE
                                      
