--- a/style.css
+++ b/style.css
@@ -174,7 +174,8 @@ arrows */
   display: flex;
 }
 
-.slider-arrows_item {}
+.slider-arrows_item {
+}
 
 .slider-arrows_nav {
   position: absolute;
@@ -233,7 +234,8 @@ dots */
   display: flex;
 }
 
-.slider-dots_item {}
+.slider-dots_item {
+}
 
 .slider-dots_btn-wrapper {
   position: absolute;
@@ -414,26 +416,35 @@ FOOTER */
   /* grid-template-columns: 4.5fr 1.5fr;
   grid-template-rows: 1fr;
   grid-template-areas: 'footer sidebar'; */
-  grid-template: 'footer sidebar' 1fr / 4.5fr 1.5fr;
+  grid-template: "footer sidebar" 1fr / 4.5fr 1.5fr;
 }
 
 .footer {
   background-color: rgb(41, 37, 37);
 }
 
-.socials {}
+.socials {
+}
 
-.socials__link {}
+.socials__link {
+}
 
-.form {}
+.form {
+}
 
-.form__title {}
+.form__title {
+}
 
-.form__row {}
+.form__row {
+}
 
-.form__input {}
+.form__input {
+}
 
-.form__submit {}
+.form__submit {
+  background-color: rgb(0 188 180);
+  color: #fff;
+}
 
 /* 
 SIDEBAR
@@ -441,6 +452,10 @@ SIDEBAR
 SIDEBAR 
 */
 
-.sidebar {}
+.sidebar {
+  grid-area: sidebar;
+  background-color: rgb(0 188 180);
+}
 
-.btn--rounded {}
+.btn--rounded {
+}
