--- a/style.css
+++ b/style.css
@@ -420,7 +420,11 @@ FOOTER */
 }
 
 .footer {
+  display: flex;
   background-color: rgb(41, 37, 37);
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 .socials {
@@ -433,6 +437,7 @@ FOOTER */
 }
 
 .form__title {
+  color: #fff;
 }
 
 .form__row {
@@ -444,6 +449,11 @@ FOOTER */
 .form__submit {
   background-color: rgb(0 188 180);
   color: #fff;
+}
+
+.copy {
+  color: #d1d1d1;
+  font-size: 10px;
 }
 
 /* 
