--- a/style.css
+++ b/style.css
@@ -174,8 +174,7 @@ arrows */
   display: flex;
 }
 
-.slider-arrows_item {
-}
+.slider-arrows_item {}
 
 .slider-arrows_nav {
   position: absolute;
@@ -234,8 +233,7 @@ dots */
   display: flex;
 }
 
-.slider-dots_item {
-}
+.slider-dots_item {}
 
 .slider-dots_btn-wrapper {
   position: absolute;
@@ -421,34 +419,31 @@ FOOTER */
 
 .footer {
   display: flex;
-  background-color: rgb(41, 37, 37);
+  /* background-color: rgb(41, 37, 37); */
+  background-color: rgba(47, 47, 47, 1);
   gap: 20px;
   align-items: center;
   justify-content: center;
-}
-
-.socials {
-}
-
-.socials__link {
-}
-
-.form {
-}
-
-.form__title {
   color: #fff;
 }
 
-.form__row {
+.socials {}
+
+.socials__link {}
+
+.form {}
+
+.form__title {
+  /* color: #fff; */
 }
 
-.form__input {
-}
+.form__row {}
+
+.form__input {}
 
 .form__submit {
   background-color: rgb(0 188 180);
-  color: #fff;
+  /* color: #fff; */
 }
 
 .copy {
