--- a/style.css
+++ b/style.css
@@ -430,6 +430,7 @@ FOOTER */
                         '. . . copy'; */
 
   grid-template: '. socials form logo' max-content '. . . copy' 100px / 1fr 1fr 1.5fr 1fr;
+  align-items: end;
   /* gap: 20px;
   align-items: center;
   justify-content: center; */
@@ -439,7 +440,7 @@ FOOTER */
 
 .socials {
   grid-area: socials;
-  display: flex
+  display: flex;
 }
 
 .socials__link {}
