--- a/style.css
+++ b/style.css
@@ -174,8 +174,6 @@ arrows */
   display: flex;
 }
 
-.slider-arrows_item {}
-
 .slider-arrows_nav {
   position: absolute;
   bottom: 9%;
@@ -198,12 +196,14 @@ arrows */
 }
 
 .slider-arrows_arrow:hover,
-.orange__arrow:hover {
+.orange__arrow:hover,
+.socials__link:hover {
   opacity: 0.8;
 }
 
 .slider-arrows_arrow:active,
-.orange__arrow:active {
+.orange__arrow:active,
+.socials__link:active {
   opacity: 0.6;
 }
 
@@ -402,6 +402,7 @@ THIRSTY */
   position: absolute;
   bottom: 25px;
   right: 30px;
+  transition: opacity 0.2s;
 }
 
 /* 
@@ -442,35 +443,87 @@ FOOTER */
 .socials {
   grid-area: socials;
   display: flex;
+  gap: 10px;
+
 }
 
-.socials__link {}
+.socials__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #fff;
+  height: 36px;
+  width: 36px;
+  border-radius: 50%;
+  transition: opacity 0.2s;
+}
+
+.socials__link img {
+  width: 18px;
+}
 
 .form {
   grid-area: form;
+  text-transform: uppercase;
+
 }
 
 .form__title {
-  /* color: #fff; */
+  font-size: 18px;
+  margin-bottom: 20px;
+  letter-spacing: 2px;
 }
 
 .form__row {}
 
-.form__input {}
+.form__input {
+  height: 40px;
+  width: 200px;
+  padding: 0 20px;
+  outline: none;
+  background-color: #ebebebf6;
+  text-transform: uppercase;
+}
+
+.form__input:focus {
+  background-color: #FFF;
+}
 
 .form__submit {
   background-color: rgb(0 188 180);
-  /* color: #fff; */
+  height: 40px;
+  padding: 0 20px;
+  color: #fff;
+  letter-spacing: 2px;
+  transition: background-color 0.2s;
+}
+
+.form__submit:hover {
+  background-color: rgb(0, 197, 187);
+
+}
+
+.form__submit:active {
+  background-color: rgb(0, 180, 171);
 }
 
 .footer__logo {
   grid-area: logo;
+  justify-self: center;
+  transition: transfrom 0.6s, filter 0.6s;
+}
+
+.footer__logo:hover {
+  transform: scale(1.05);
+  filter: sepia(100%)
 }
 
 .copy {
   grid-area: copy;
   color: #d1d1d1;
   font-size: 10px;
+  justify-self: center;
+  margin-bottom: 20px;
 }
 
 /* 
@@ -486,4 +539,7 @@ SIDEBAR
 
 .btn--rounded {
   border-radius: 25px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  margin-top: 20px;
 }
