--- a/style.css
+++ b/style.css
@@ -510,7 +510,7 @@ FOOTER */
 .footer__logo {
   grid-area: logo;
   justify-self: center;
-  transition: transfrom 0.6s, filter 0.6s;
+  transition: transform 0.6s, filter 0.6s;
 }
 
 .footer__logo:hover {
