--- a/style.css
+++ b/style.css
@@ -158,9 +158,11 @@ p {
     "freshy healthy slider-dots ornge" 3fr / 2fr 1fr 1.5fr 1.5fr;
 }
 
-/* arrows
+/* 
 arrows
-arrows */
+arrows
+arrows 
+*/
 .slider-arrows {
   grid-area: slider-arrows;
   position: relative;
@@ -169,7 +171,7 @@ arrows */
 
 .slider-arrows_items-wrapper {
   filter: brightness(110%);
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   display: flex;
 }
