--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ font-family: "Roboto", sans-serif; для лого
 }
 
 .btn {
+  font-family: "Fira Sans Condensed", sans-serif;
   color: rgb(255, 255, 255);
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -467,6 +468,7 @@ FOOTER */
 .form {
   grid-area: form;
   text-transform: uppercase;
+  font-family: "Fira Sans Condensed", sans-serif;
 
 }
 
@@ -482,7 +484,7 @@ FOOTER */
   height: 40px;
   width: 200px;
   padding: 0 20px;
-  outline: none;
+  /* outline: none; */
   background-color: #ebebebf6;
   text-transform: uppercase;
 }
@@ -491,12 +493,15 @@ FOOTER */
   background-color: #FFF;
 }
 
+
 .form__submit {
+  font-size: 14px;
   background-color: rgb(0 188 180);
   height: 40px;
   padding: 0 20px;
   color: #fff;
   letter-spacing: 2px;
+  line-height: 1.3;
   transition: background-color 0.2s;
 }
 
