--- a/style.css
+++ b/style.css
@@ -501,7 +501,7 @@ FOOTER */
   padding: 0 20px;
   color: #fff;
   letter-spacing: 2px;
-  line-height: 1.3;
+  /* line-height: 1.3; */
   transition: background-color 0.2s;
 }
 
