--- a/index.pug
+++ b/index.pug
@@ -110,7 +110,7 @@ html(lang="en")
                     p.copy &copy 2024. Everything stolen
                 article.sidebar.common
                     h2.title now try <br> out our 
-                     span jui&shy;sy 
+                     span jui&shy;cy 
                     .common__desc 
                         p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem quos dignissimos voluptatibus praesentium obcaecati veritatis.
  
