--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ arrows
 
 .slider-arrows_items-wrapper {
   filter: brightness(110%);
-  /* width: 100%; */
+  width: 100%;
   height: 100%;
   display: flex;
 }
@@ -588,5 +588,19 @@ mobile
       "slider-arrows slider-arrows slider-arrows healthy"
       "thirsty thirsty thirsty thirsty"
       "slider-dots slider-dots orange orange";
+  }
+
+  .slider-arrows,
+  .slider-dots,
+  .orange {
+    height: 400px;
+    /* width: 100%; */
+  }
+
+  .slider-arrows_item,
+  .slider-dots_item,
+  .orange-bg {
+    max-width: 100%;
+    /* height: 100%; */
   }
 }
