--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ arrows
 .slider-arrows {
   grid-area: slider-arrows;
   position: relative;
-  max-width: fit-content;
+  /* max-width: fit-content; */
 }
 
 .slider-arrows_items-wrapper {
@@ -474,8 +474,7 @@ FOOTER */
   letter-spacing: 2px;
 }
 
-.form__row {
-}
+.form__row {}
 
 .form__input {
   height: 40px;
@@ -593,14 +592,14 @@ mobile
   .slider-arrows,
   .slider-dots,
   .orange {
-    height: 400px;
-    /* width: 100%; */
+    height: 300px;
+    /* width: auto; */
   }
 
   .slider-arrows_item,
   .slider-dots_item,
   .orange-bg {
-    max-width: 100%;
+    width: 100%;
     /* height: 100%; */
   }
 }
