.slider-bg_item class added

--- a/index.pug
+++ b/index.pug
@@ -78,7 +78,7 @@ html(lang="en")
                             |cum magni soluta enim corrupti consectetur nemo qui beatae possimus ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. <u>Eligendi,</u> odio?
                 .orange 
                     .orange-bg
-                        img(src="/img/orange.jpg", alt=" ", srcset="")
+                        img.orange-bg_item(src="/img/orange.jpg", alt=" ", srcset="")
                     .orange__btn-wrapper 
                         button.btn.orange__btn start drinking
                     .orange__nav 
