--- a/style.css
+++ b/style.css
@@ -592,13 +592,13 @@ mobile
   .slider-arrows,
   .slider-dots,
   .orange {
-    height: 300px;
+    height: 250px;
     /* width: auto; */
   }
 
   .slider-arrows_item,
   .slider-dots_item,
-  .orange-bg {
+  .orange-bg_item {
     width: 100%;
     /* height: 100%; */
   }
