--- a/style.css
+++ b/style.css
@@ -602,4 +602,10 @@ mobile
     width: 100%;
     /* height: 100%; */
   }
+
+  .wrapper-down {
+    grid-template-columns: auto;
+    grid-template-rows: max-content max-content;
+    grid-template-areas: 'sidebar' 'footer';
+  }
 }
