--- a/index.pug
+++ b/index.pug
@@ -94,7 +94,7 @@ html(lang="en")
                                 img(src="/img/icons_instagram.png", alt="icon-instagram")
                         li
                             a.socials__link(href="#!")
-                                img(src="/img/icons_x.png", alt="icon-x")
+                                img(src="/img/icons_xwitter.png", alt="icon-x")
                         li
                             a.socials__link(href="#!")
                                 img(src="/img/icons_facebook.png", alt="icon-facebook")
