--- a/style.css
+++ b/style.css
@@ -649,4 +649,10 @@ mobile
 }
 
 @media (max-width: 600px) {
+  .main {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 'freshy' 'slider-arrows' 'healthy' 'thirsty' 'slider-dots' 'orange';
+
+  }
 }
