--- a/index.pug
+++ b/index.pug
@@ -26,7 +26,8 @@ html(lang="en")
                             a(href="#!") LOCATION
                         li
                             a(href="#!") CONTACT
-                button.search 
+                button(type="button") menu
+                button(type="button").search 
 
                     svg.search_icon(width="35" height="35" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg")
                         path(
