--- a/style.css
+++ b/style.css
@@ -133,6 +133,24 @@ p {
   width: 40px;
   height: 30px;
 }
+.menu-icon::before,
+.menu-icon::after {
+  content: "";
+  display: block;
+  background: #000;
+  width: 100%;
+  height: 3px;
+  position: absolute;
+}
+
+.menu-icon::before {
+  top: 0;
+}
+
+.menu-icon::after {
+  bottom: 0;
+}
+
 .menu-icon__line {
   display: block;
   background: #000;
@@ -140,14 +158,6 @@ p {
   height: 3px;
 }
 
-.menu-icon__line::after,
-.menu-icon__line::before {
-  content: "";
-  display: block;
-  background: #000;
-  width: 100%;
-  height: 3px;
-}
 .search {
   grid-area: search;
 }
