--- a/index.pug
+++ b/index.pug
@@ -26,7 +26,7 @@ html(lang="en")
                             a(href="#!") LOCATION
                         li
                             a(href="#!") CONTACT
-                button(type="button").menu-icon 
+                button(type="button").menu-icon.menu-icon--active 
                     .menu-icon__line
                 button(type="button").search 
 
