--- a/style.css
+++ b/style.css
@@ -132,14 +132,11 @@ p {
   position: relative;
   width: 40px;
   height: 30px;
+  background-color: rgb(212, 220, 58);
 }
 .menu-icon::before,
 .menu-icon::after {
   content: "";
-  display: block;
-  background: #000;
-  width: 100%;
-  height: 3px;
   position: absolute;
 }
 
@@ -151,11 +148,18 @@ p {
   bottom: 0;
 }
 
-.menu-icon__line {
+.menu-icon__line,
+.menu-icon::before,
+.menu-icon::after {
   display: block;
   background: #000;
   width: 100%;
   height: 3px;
+}
+
+.menu-icon--active .menu-icon__line {
+  background-color: transparent;
+  /* display: none; */
 }
 
 .search {
