--- a/index.pug
+++ b/index.pug
@@ -117,4 +117,4 @@ html(lang="en")
                         p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem quos dignissimos voluptatibus praesentium obcaecati veritatis.
  
                         button.btn.btn--rounded MORE
-                                     
+        script(src="script.js") 
