--- a/style.css
+++ b/style.css
@@ -164,10 +164,12 @@ p {
 
 .menu-icon--active::before {
   transform: rotate(45deg);
+  top: 50%;
 }
 
 .menu-icon--active::after {
   transform: rotate(-45deg);
+  bottom: 50%;
 }
 
 .search {
