--- a/style.css
+++ b/style.css
@@ -142,12 +142,12 @@ p {
 
 .menu-icon::before {
   top: 0;
-  transition: top 0.5s, transform 0.5s;
+  transition: transform 0.5s, top 0.5s 0.5s;
 }
 
 .menu-icon::after {
   bottom: 0;
-  transition: bottom 0.5s, transform 0.5s;
+  transition: transform 0.5s, bottom 0.5s 0.5s;
 }
 
 .menu-icon__line,
@@ -156,7 +156,7 @@ p {
   display: block;
   background: #000;
   width: 100%;
-  height: 4px;
+  height: 5px;
 }
 
 .menu-icon--active .menu-icon__line {
