--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ p {
   background: #000;
   width: 100%;
   height: 5px;
+  border-radius: 6px;
 }
 
 .menu-icon--active .menu-icon__line {
@@ -679,11 +680,21 @@ mobile
 }
 
 @media (max-width: 760px) {
+  .header {
+    grid-template-columns: repeat(2, max-content);
+    grid-template-areas: "logo menu-icon";
+  }
   .header_nav {
     display: none;
   }
+
+  .search {
+    display: none;
+  }
+
   .menu-icon {
     display: block;
+    grid-area: menu-icon;
   }
 
   .footer {
