--- a/index.pug
+++ b/index.pug
@@ -66,7 +66,7 @@ html(lang="en")
                             |cum magni soluta enim corrupti consectetur nemo qui beatae possimus ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. <u>Eligendi,</u> odio?
                 article.healthy.common.common--col-rev
                     h2.title worry less and drink 
-                     span hea&shy;lthy 
+                     span heal&shy;thy 
                     .common__desc 
                         p Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             i Aspernatur, 
