--- a/style.css
+++ b/style.css
@@ -160,8 +160,9 @@ p {
   display: block;
   background: #000;
   width: 100%;
-  height: 5px;
-  border-radius: 6px;
+  /* width: 25px; */
+  height: 7px;
+  border-radius: 10px;
 }
 
 .menu-icon--active .menu-icon__line {
@@ -172,13 +173,13 @@ p {
 
 .menu-icon--active::before {
   transform: rotate(45deg) translateY(-50%);
-  top: 46%;
+  top: 50%;
   transition: top 0.5s, transform 0.5s 0.5s;
 }
 
 .menu-icon--active::after {
   transform: rotate(-45deg) translateY(50%);
-  bottom: 50%;
+  bottom: 45%;
   transition: bottom 0.5s, transform 0.5s 0.5s;
 }
 
