--- a/style.css
+++ b/style.css
@@ -156,9 +156,21 @@ p {
   transition: transform 0.5s, bottom 0.5s 0.5s;
 }
 
+/* ==================================== */
+/* 
 .menu-icon__line,
 .menu-icon::before,
 .menu-icon::after {
+  display: block;
+  background: #000;
+  width: 100%;
+  height: 7px;
+  border-radius: 10px;
+} */
+
+/* ===================================== */
+
+.menu-icon__line {
   display: block;
   background: #000;
   width: 100%;
