--- a/style.css
+++ b/style.css
@@ -183,7 +183,9 @@ p {
   transition: width 0.5s;
 }
 
-.menu-icon--active .menu-icon__line {
+.menu-icon--active .menu-icon__line,
+.menu-icon--active::before,
+.menu-icon--active::after {
   /* display: flex;
   align-items: center; */
 
@@ -195,23 +197,19 @@ p {
   /* display: none; */
 }
 
-.menu-icon--active::before {
-  /* transform: rotate(45deg) translateY(-50%);
+/* .menu-icon--active::before {
+  transform: rotate(45deg) translateY(-50%);
   top: 50%;
-  transition: top 0.5s, transform 0.5s 0.5s; */
-  border-radius: 50%;
-  width: 10px;
-  transition: width 0.5s, border-radius 0.5s;
-}
+  transition: top 0.5s, transform 0.5s 0.5s;
+ 
+} */
 
-.menu-icon--active::after {
-  /* transform: rotate(-45deg) translateY(50%);
+/* .menu-icon--active::after {
+  transform: rotate(-45deg) translateY(50%);
   bottom: 50%;
-  transition: bottom 0.5s, transform 0.5s 0.5s; */
-  border-radius: 50%;
-  width: 10px;
-  transition: width 0.5s, border-radius 0.5s;
-}
+  transition: bottom 0.5s, transform 0.5s 0.5s;
+
+} */
 
 .search {
   grid-area: search;
